Bug 386925 - Sunbird Trunk fails to build (Error: Cannot open include file nsBuildID.h); r=mvl